<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/Naam_id"
        style="@style/NameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/Moi_id"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/layout_margin"
        android:contentDescription="@string/Klein_Moi"
        app:srcCompat="@drawable/moi_1" />


    <EditText
        android:id="@+id/Vakken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/wat_zijn_u_vakken"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <Button
        android:id="@+id/voeg_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/voeg_toe" />

    <ScrollView
        android:id="@+id/Scrollen"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/presentatie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:paddingStart="@dimen/padding"
            android:paddingEnd="@dimen/padding"
            android:text="@string/presentatie"
            android:textAppearance="@style/Animation.AppCompat.Dialog"
            android:textSize="18sp" />
    </ScrollView>


</LinearLayout>

